Fixed: should support FlowLayout stretch for flex-wrap, justify-content, align-items, align-content (editor).

--- a/src/public/css/construction/area/area.scss
+++ b/src/public/css/construction/area/area.scss
@@ -369,8 +369,8 @@ html.internal-fsb-guide-on {
   	}
 	}
 	
-	&.internal-fsb-wrap > .container > .row,
-	&.internal-fsb-wrap > .container-fluid > .row {
+	&.internal-fsb-stretch > .container > .row,
+	&.internal-fsb-stretch > .container-fluid > .row {
 		height: 100%;
 	}
 	
