--- a/src/public/css/construction/distribution/embed.scss
+++ b/src/public/css/construction/distribution/embed.scss
@@ -34,8 +34,8 @@ html, body {
   	}
 	}
 	
-	&.internal-fsb-wrap > .container > .row,
-	&.internal-fsb-wrap > .container-fluid > .row {
+	&.internal-fsb-stretch > .container > .row,
+	&.internal-fsb-stretch > .container-fluid > .row {
 		height: 100%;
 	}
 	
